k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopshub-backend-deployment
  namespace: devops
  labels:
    app: devopshub-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devopshub-backend
  template:
    metadata:
      labels:
        app: devopshub-backend
    spec:
      containers:
      - name: backend
        image: devopshub-user/devopshub-backend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
