k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopshub-backend-service
  namespace: devops
spec:
  selector:
    app: devopshub-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
